IKM-1367- Language coordinate drop down overlap fix move style to css file

--- a/framework/src/main/resources/dev/ikm/komet/framework/graphics/komet.css
+++ b/framework/src/main/resources/dev/ikm/komet/framework/graphics/komet.css
@@ -1463,3 +1463,8 @@ modena.css is the default css.
     -fx-icon-size: 20;
     -fx-rotate: 90;
 }
+
+.menu-item-custom {-fx-pref-width: 200px;
+ fx-alignment: center-right;
+ -fx-padding: 0 20px 0 0;
+}
